# Drudge

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  config.py  main.py  pyproject.toml  utils.py
agent/: __init__.py  cli_renderer.py  codex_auth.py  codex_client.py  codex_usage.py  context_manager.py  cow_agent.md  drudge_agent.py  llm  llm.py  output_filter.py  project_instructions.py  provider_probe.py  refusal.py  runtime.py  skills.py  state.py  storage.py  tool_selector.py
docs/: AGENT_RUNTIME.md  APPROVAL_STREAMING.md  CODEX_CONFIG.md  CODEX_OAUTH.md  LLM_CONTEXT_COMPACTION.md  LLM_RETRY_RECOVERY.md  MCP_TRACE_TASKS.md  PRIORITY_1_2_3.md  PROVIDER_PROBE.md  SESSIONS_AGENTS_SKILLS.md  STATUS.md  THINK_OUTPUT_FIX.md  TOOL_SELECTION.md  WEEK1_IMPLEMENTATION.md  WORKFLOWS_MEMORY_UNDO.md
prompt/: __init__.py  builder.py
tests/: __init__.py  fakes.py  test_agent_loop.py  test_approval_and_streaming.py  test_cli.py  test_cli_renderer.py  test_codex_auth.py  test_codex_client.py  test_codex_usage.py  test_config.py  test_context_manager.py  test_mcp_trace_tasks.py  test_output_filter.py  test_provider_probe.py  test_repository_hygiene.py  test_responses_adapter.py  test_sessions_instructions_skills.py  test_tool_selection.py  test_tools_security.py
tests/fixtures/: fake_mcp_server.py
tools/: __init__.py  context.py  file_ops.py  provider.py  registry.py  result.py  risk.py  termina.py  terminal.py  web.py
