[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drudge"
version = "0.1.0"
description = "A lightweight terminal AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "prompt-toolkit>=3.0",
    "PyYAML>=6.0",
]

[project.scripts]
drudge = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "utils"]

[tool.setuptools.packages.find]
include = ["agent*", "prompt*", "tools*"]
